Fix overflow x

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 	}
 
 	body {
-		@apply bg-slate-900 min-h-screen;
+		@apply bg-slate-900 min-h-screen overflow-x-hidden;
 	}
 
 	.navlink {
